--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  *
- * @copyright:: The XOOPS Project http://sourceforge.net/projects/xoops/
+ * @copyright:: XOOPS Project (https://xoops.org)
  * @license::    {@link http://www.gnu.org/licenses/gpl-2.0.html GNU Public License}
  * @package::   dh-info
  * @since::     2.5.6
